thunder icon added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <span class="slider-number">8</span>
       </div>
 
-      <button class="generate-button">Generate Password</button>
+      <button class="generate-button">
+        <i class="uil uil-bolt"></i> Generate Password
+      </button>
     </div>
   </body>
 </html>
